Add About Author Section / Reviews Animations

--- a/index.html
+++ b/index.html
@@ -134,19 +134,16 @@
         target="_blank" >
           <img src="src/amazonLogo.png" class="amazonLogo"></img>
         </a>
-    
     </section>
+    <h2 class="authorTitle">A word from the author</h2>
     <!-- Author Section -->
     <div class="authorContainer">
-      <p class="authorTitle">About the author</p>
       <!-- <img src="src/biPortrait.jpg" class="authorPortrait"> -->
       <section class="authorSection">
-            <p class="authorDescription">
-              My name is Ngoc NGUYEN and I am the author of Weird Culture Kids,
-              a memoir about my growing up in different cultures and not knowing
-              where to fully belong. I am kind of a sweet girl but sometimes I
-              wish could have feelings.
+        <img src="src/back.svg" class="arrow" id="back">
+            <p class="authorDescription" id="currentDescription">
             </p>
+            <img src="src/next.svg" class="arrow" id="next">
         </section>
     </div>
     <!-- Review Section -->
