--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Logo -->
     <section>
       <div>
-        <img src="src/logo.jpg" class="mainLogo">
+        <img src="src/logoSVG.svg" class="mainLogo">
       </div>
     </section>
     <!-- Book Preview -->
@@ -135,6 +135,10 @@
           <img src="src/amazonLogo.png" class="amazonLogo"></img>
         </a>
     </section>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/UDsJZ3XWOM0" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+    picture-in-picture" allowfullscreen></iframe>
     <h2 class="authorTitle">A word from the author</h2>
     <!-- Author Section -->
     <div class="authorContainer">
@@ -152,6 +156,12 @@
         <p id="review"></p>
         <p id="author"></p>
     </div>
+    </section>
+    <!-- Footer Section -->
+    <section>
+      <div class="footerContainer">
+        
+      </div>
     </section>
     <script src="index.js"></script>
   </body>
