Add Footer / Add copyBar

--- a/index.html
+++ b/index.html
@@ -158,9 +158,39 @@
     </div>
     </section>
     <!-- Footer Section -->
-    <section>
+    <section style="width: 100%;">
       <div class="footerContainer">
-        
+        <div class="socialMediaContainer">
+          <a href="https://www.instagram.com/weirdculturekids/"
+          target="_blank"><img src="src/instagram.svg" class="socialIcon"></a>
+          <a href="https://www.facebook.com/weirdculturekids"
+          target="_blank"><img src="src/facebook.svg" class="socialIcon"></a>
+          <a href="mailto:weirdculturekids@gmail.com"><img src="src/mail.svg" class="socialIcon"></a>
+        </div>
+        <div>
+          <div class="retailerContainer">
+            <a
+            href="https://www.amazon.fr/Little-Book-Stoicism-Resilience-Confidence/dp/3952506907/ref=sr_1_7?dchild=1&keywords=books&qid=1602925905&sr=8-7"
+            target="_blank" >
+              <img src="src/amazon.svg" class="amazonSVG"></img>
+            </a>
+            <a href="#">
+              <img src="src/fnac.svg" class="fnacLogo">
+            </a>
+          </div>
+        </div>
+        <div>
+          <div class="footerRight">
+              <a href="#">Publisher</a>
+              <a href="#">Legal notice</a>
+              <a href="#">Copyright</a>
+          </div>
+      </div>
+      </div>
+    </section>
+    <section class="copyrightBar">
+      <div >
+        <p>&copy; Ngoc Nguyen 2020</p>
       </div>
     </section>
     <script src="index.js"></script>
