--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="book">
           <label for="page-1" class="book__page book__page--1">
             <img
-            src="https://payload.cargocollective.com/1/1/45680/11874923/flat_yaar_saritevrani_670.jpg"
+            src="./src/Concept 2.jpg"
             alt="" />
           </label>
 
@@ -129,27 +129,81 @@
     </section>
     <!-- Commercial Link Section -->
     <section class="amazonLink">
-        <a
-        href="https://www.amazon.fr/Little-Book-Stoicism-Resilience-Confidence/dp/3952506907/ref=sr_1_7?dchild=1&keywords=books&qid=1602925905&sr=8-7"
-        target="_blank" >
-          <img src="src/amazonLogo.png" class="amazonLogo"></img>
-        </a>
+          <p class="amazonText">available December 2020</p>
+          <img src="src/amazon.svg" class="amazonLogo"></img>
     </section>
-    <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/UDsJZ3XWOM0" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
-    picture-in-picture" allowfullscreen></iframe>
-    <h2 class="authorTitle">A word from the author</h2>
+
+    <div class="youtubeVideo">
+      <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/UDsJZ3XWOM0" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+      picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <h2 class="authorTitle">about the book</h2>
     <!-- Author Section -->
     <div class="authorContainer">
-      <!-- <img src="src/biPortrait.jpg" class="authorPortrait"> -->
       <section class="authorSection">
-        <img src="src/back.svg" class="arrow" id="back">
-            <p class="authorDescription" id="currentDescription">
-            </p>
-            <img src="src/next.svg" class="arrow" id="next">
+          <p>
+            Have you ever felt strangely out of place? Have you ever thought you didn’t truly
+            belong?
+          </p>
+          <p>
+            Weird Culture Kids is a memoir about growing up in and between different cultures
+            and experiencing the world through international lenses. It goes deep into the
+            author’s journey from birth to adolescence, navigating into the different cultures she
+            lived in, encountered with and consciously chose as part of her identity. Sprinkled
+            with conversations with other, culturally-speaking, Weirdos, this book gives
+            insights into coping mechanisms for displacement / change / relocation / a mobile
+            life.
+          </p>
+          <p>
+            Nguyễn explores questions around cultures, identities and belonging, such as:
+          </p>
+          <ul>
+            <li>Can you be ‘from’ a place?</li>
+            <li>What happens when part of your identity disappears?</li>
+            <li>What’s the relationship between language and identity?</li>
+            <li>What does the question ‘where are you from?’ even mean?</li>
+          </ul>
+          <p>
+            You’ll discover you don’t have to belong to a physical man-made piece of land or a
+            nation-state. You can belong to people, cities and memories. You can belong to a
+            shared habit, a song or a dance routine.
+          </p>
+          <p>
+            And most importantly, you belong in that peaceful state of Acceptance that is nested
+            somewhere deep within you.
+          </p>
         </section>
     </div>
+
+    <!-- Author Section -->
+    <div class="bookContainer">
+      <section class="bookSection">
+        <div class="bookDescription">
+          <p>
+            Ngọc (Bi) Nguyễn was born in Moscow, Russia, raised in Hanoi, Vietnam, and
+            educated in an International French school for twelve years. Aged fifteen, she moved
+            to the United States to attend a very Connecticut boarding school. Ever since, she’s
+            been asked this simple, yet deeply confusing question: ‘where are you from?’.
+            Because she didn’t have any concrete answer to give, Ngọc decided to write a
+            memoir about her identity quest.
+          </p>
+          <p>
+            <i>Weird Culture Kids</i> is her firstborn.
+          </p>
+          <p>
+            Today, Ngọc is committed to build an alternative community for Weird Culture Kids
+            through her book. Her story, and that of others shared in this memoir, is a tangible
+            proof to demonstrate that beyond her rootlessness, her tribe does, indeed, exist.
+          </p>
+      </div>
+      <div>
+        <img class="portrait" src="src/biPortrait.jpg">
+      </div>
+      </section>
+    </div>
+
     <!-- Review Section -->
     <section class="reviewSection">
       <div class="review" id="reviewSection">
@@ -157,6 +211,7 @@
         <p id="author"></p>
     </div>
     </section>
+
     <!-- Footer Section -->
     <section style="width: 100%;">
       <div class="footerContainer">
@@ -168,26 +223,11 @@
           <a href="mailto:weirdculturekids@gmail.com"><img src="src/mail.svg" class="socialIcon"></a>
         </div>
         <div>
-          <div class="retailerContainer">
-            <a
-            href="https://www.amazon.fr/Little-Book-Stoicism-Resilience-Confidence/dp/3952506907/ref=sr_1_7?dchild=1&keywords=books&qid=1602925905&sr=8-7"
-            target="_blank" >
-              <img src="src/amazon.svg" class="amazonSVG"></img>
-            </a>
-            <a href="#">
-              <img src="src/fnac.svg" class="fnacLogo">
-            </a>
-          </div>
         </div>
-        <div>
-          <div class="footerRight">
-              <a href="#">Publisher</a>
-              <a href="#">Legal notice</a>
-              <a href="#">Copyright</a>
-          </div>
-      </div>
       </div>
     </section>
+
+    <!-- Copyright Bar -->
     <section class="copyrightBar">
       <div >
         <p>&copy; Ngoc Nguyen 2020</p>
