--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h1 class="page__content-book-title">Weird Culture Kids</h1>
                 <h2 class="page__content-author">Ngoc Nguyen</h2>
 
-                <p class="page__content-credits">
+                <!-- <p class="page__content-credits">
                   Introduction by
                   <span>Paul Krugman</span>
                 </p>
@@ -82,11 +82,10 @@
                 <p class="page__content-credits">
                   Cover by
                   <span>Alex Wells</span>
-                </p>
+                </p> -->
 
                 <div class="page__content-copyright">
-                  <p>The Folio Society</p>
-                  <p>London - MMXII</p>
+                  <p>New Degree Press</p>
                 </div>
               </div>
             </div>
